# calendar-bot

./: .gitignore  calbot.py  pyproject.toml
calbot/: bot.py  conf.py  formatting.py  processing.py
calbot/commands/: add.py  advance.py  cal.py  format.py
